welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:26: error: value Yellow is not a member of object java.awt.Color
  faireV(Color.Yellow)
               ^MethodsPicture:27: error: value Red is not a member of object java.awt.Color
  faireV(Color.Red)
               ^MethodsPicture:28: error: value Blue is not a member of object java.awt.Color
  faireV(Color.Blue)
               ^MethodsPicture:29: error: value Green is not a member of object java.awt.Color
  faireV(Color.Green)
               ^